// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleSetup Analytics 4 initial setup flow should match the snpashot 1`] = `
<div>
  <header
    class="googlesitekit-header"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-header__logo mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone"
        >
          <a
            aria-label="Go to dashboard"
            class="googlesitekit-cta-link googlesitekit-header__logo-link"
            href="http://example.com/wp-admin/admin.php?page=googlesitekit-dashboard"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              <div
                aria-hidden="true"
                class="googlesitekit-logo"
              >
                <svg />
                <svg />
                <span
                  class="screen-reader-text"
                >
                  Site Kit by Google Logo
                </span>
              </div>
            </span>
          </a>
        </div>
        <div
          class="googlesitekit-header__children mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <button
            class="mdc-button mdc-button--tertiary"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Exit setup
            </span>
          </button>
        </div>
      </div>
    </div>
  </header>
  <div
    class="googlesitekit-subheader"
  >
    <div
      class="googlesitekit-progress-indicator"
      style="grid-template-columns: 46px repeat(6, 1fr);"
    >
      <div
        class="googlesitekit-progress-indicator__segment"
      />
      <div
        class="googlesitekit-progress-indicator__segment"
      />
      <div
        class="googlesitekit-progress-indicator__segment"
      />
      <div
        class="googlesitekit-progress-indicator__segment"
      />
      <div
        class="googlesitekit-progress-indicator__segment"
      />
      <div
        class="googlesitekit-progress-indicator__segment"
      />
    </div>
  </div>
  <div
    class="googlesitekit-setup"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <section
            class="googlesitekit-setup__wrapper"
          >
            <div
              class="mdc-layout-grid"
            >
              <div
                class="mdc-layout-grid__inner"
              >
                <div
                  class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
                >
                  <div
                    class="googlesitekit-setup-module googlesitekit-setup-module--analytics"
                  >
                    <div
                      class="googlesitekit-setup-module__step"
                    >
                      <h1
                        class="googlesitekit-typography googlesitekit-setup__title googlesitekit-typography--headline googlesitekit-typography--medium"
                      >
                        Set up Analytics
                      </h1>
                    </div>
                    <div
                      class="googlesitekit-setup-module__step"
                    >
                      <form
                        class="googlesitekit-analytics-setup__form"
                      >
                        <p
                          class="googlesitekit-setup-module__select_account"
                        >
                          Please select the account information below. You can change this later in your settings.
                        </p>
                        <div
                          class="googlesitekit-setup-module__inputs"
                        >
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="987654321"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Example Com
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-15"
                                    style=""
                                  >
                                    Account
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                          </div>
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics-4__select-property googlesitekit-analytics-4__select-property--loaded mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="1122334455"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Example Property (1122334455)
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-16"
                                    style=""
                                  >
                                    Property
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                            <div
                              class="googlesitekit-setup__step-hint"
                            >
                              <p>
                                What is an Analytics property?
                              </p>
                              <span
                                class="googlesitekit-info-tooltip"
                              >
                                <svg />
                              </span>
                            </div>
                          </div>
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics-4__select-webdatastream mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="4000"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Main datastream (G-155BC2366E)
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-17"
                                    style=""
                                  >
                                    Web Data Stream
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                            <div
                              class="googlesitekit-setup__step-hint"
                            >
                              <p>
                                What is a web data stream?
                              </p>
                              <span
                                class="googlesitekit-info-tooltip"
                              >
                                <svg />
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="googlesitekit-analytics-enable-enhanced-measurement"
                        >
                          <div
                            aria-checked="true"
                            class="mdc-switch mdc-switch--checked"
                            role="switch"
                            tabindex="0"
                          >
                            <div
                              class="mdc-switch__track"
                            >
                               
                            </div>
                            <div
                              class="mdc-switch__thumb-underlay"
                            >
                              <div
                                class="mdc-switch__thumb"
                              >
                                <input
                                  checked=""
                                  class="mdc-switch__native-control"
                                  id="googlesitekit-switch-5"
                                  readonly=""
                                  role="switch"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </div>
                          <label
                            class=""
                            for="googlesitekit-switch-5"
                          >
                            Enable enhanced measurement
                          </label>
                          <p
                            class="googlesitekit-module-settings-group__helper-text"
                          >
                            This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
                            <a
                              aria-label="Learn more (opens in a new tab)"
                              class="googlesitekit-cta-link"
                              href="https://support.google.com/analytics/answer/9216061?hl=en-US"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              <span
                                class="googlesitekit-cta-link__contents"
                              >
                                Learn more
                              </span>
                              <span
                                class="googlesitekit-icon-wrapper"
                                style="margin-left: 5px;"
                              >
                                <svg />
                              </span>
                            </a>
                          </p>
                        </div>
                        <p
                          class="googlesitekit-color--surfaces-on-background-variant"
                        >
                          To track how visitors interact with your site, Site Kit will enable plugin conversion tracking. You can always disable it in settings. 
                          <a
                            aria-label="Learn more (opens in a new tab)"
                            class="googlesitekit-cta-link"
                            href="https://sitekit.withgoogle.com/support/?doc=plugin-conversion-tracking"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            <span
                              class="googlesitekit-cta-link__contents"
                            >
                              Learn more
                            </span>
                            <span
                              class="googlesitekit-icon-wrapper"
                              style="margin-left: 5px;"
                            >
                              <svg />
                            </span>
                          </a>
                        </p>
                        <div
                          class="googlesitekit-setup-module__action"
                        >
                          <button
                            class="mdc-button googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
                            target="_self"
                          >
                            <span
                              class="mdc-button__label"
                            >
                              Setup
                            </span>
                          </button>
                        </div>
                      </form>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModuleSetup Analytics 4 not initial setup flow should match the snpashot 1`] = `
<div>
  <header
    class="googlesitekit-header"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-header__logo mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone"
        >
          <a
            aria-label="Go to dashboard"
            class="googlesitekit-cta-link googlesitekit-header__logo-link"
            href="http://example.com/wp-admin/admin.php?page=googlesitekit-dashboard"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              <div
                aria-hidden="true"
                class="googlesitekit-logo"
              >
                <svg />
                <svg />
                <span
                  class="screen-reader-text"
                >
                  Site Kit by Google Logo
                </span>
              </div>
            </span>
          </a>
        </div>
        <div
          class="googlesitekit-header__children mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <div
            class="googlesitekit-dropdown-menu googlesitekit-dropdown-menu__icon-menu mdc-menu-surface--anchor"
          >
            <button
              aria-controls="googlesitekit-help-menu"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Help"
              class="mdc-button googlesitekit-header__dropdown googlesitekit-border-radius-round googlesitekit-button-icon googlesitekit-help-menu__button mdc-button--dropdown"
              target="_self"
              title="Help"
            >
              <svg />
            </button>
            <div
              class="mdc-menu mdc-menu-surface googlesitekit-width-auto"
            >
              <ul
                aria-hidden="true"
                aria-orientation="vertical"
                class="mdc-list"
                id="googlesitekit-help-menu"
                role="menu"
                tabindex="-1"
              >
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Fix common issues (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://sitekit.withgoogle.com/support/?doc=fix-common-issues"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Fix common issues
                    </span>
                  </a>
                </li>
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Read help docs (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://sitekit.withgoogle.com/documentation/"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Read help docs
                    </span>
                  </a>
                </li>
                <li
                  class="googlesitekit-help-menu-link mdc-list-item"
                  role="none"
                  tabindex="-1"
                >
                  <a
                    aria-label="Get support (opens in a new tab)"
                    class="googlesitekit-cta-link mdc-list-item__text"
                    href="https://wordpress.org/support/plugin/google-site-kit/"
                    rel="noopener noreferrer"
                    role="menuitem"
                    tabindex="-1"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Get support
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <div
    class="googlesitekit-subheader"
  />
  <div
    class="googlesitekit-setup"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
        >
          <section
            class="googlesitekit-setup__wrapper"
          >
            <div
              class="mdc-layout-grid"
            >
              <div
                class="mdc-layout-grid__inner"
              >
                <div
                  class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
                >
                  <p
                    class="googlesitekit-setup__intro-title"
                  >
                    Connect Service
                  </p>
                  <div
                    class="googlesitekit-setup-module googlesitekit-setup-module--analytics"
                  >
                    <div
                      class="googlesitekit-setup-module__step"
                    >
                      <div
                        class="googlesitekit-setup-module__logo"
                      >
                        <svg />
                      </div>
                      <h3
                        class="googlesitekit-typography googlesitekit-setup-module__title googlesitekit-typography--headline googlesitekit-typography--small"
                      >
                        Analytics
                      </h3>
                    </div>
                    <div
                      class="googlesitekit-setup-module__step"
                    >
                      <form
                        class="googlesitekit-analytics-setup__form"
                      >
                        <p
                          class="googlesitekit-setup-module__select_account"
                        >
                          Please select the account information below. You can change this later in your settings.
                        </p>
                        <div
                          class="googlesitekit-setup-module__inputs"
                        >
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics__select-account mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="987654321"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Example Com
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-33"
                                    style=""
                                  >
                                    Account
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                          </div>
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics-4__select-property googlesitekit-analytics-4__select-property--loaded mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="1122334455"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Example Property (1122334455)
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-34"
                                    style=""
                                  >
                                    Property
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                          </div>
                          <div>
                            <div
                              class="mdc-select googlesitekit-analytics-4__select-webdatastream mdc-select--outlined"
                            >
                              <i
                                class="mdc-select__dropdown-icon"
                              />
                              <input
                                name="enhanced-select"
                                type="hidden"
                                value="4000"
                              />
                              <div
                                aria-disabled="false"
                                class="mdc-select__selected-text"
                                tabindex="0"
                              >
                                Main datastream (G-155BC2366E)
                              </div>
                              <div
                                class="mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched"
                              >
                                <div
                                  class="mdc-notched-outline__leading"
                                />
                                <div
                                  class="mdc-notched-outline__notch"
                                >
                                  <label
                                    class="mdc-floating-label mdc-floating-label--float-above"
                                    for="googlesitekit-select-35"
                                    style=""
                                  >
                                    Web Data Stream
                                  </label>
                                </div>
                                <div
                                  class="mdc-notched-outline__trailing"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="googlesitekit-analytics-enable-enhanced-measurement"
                        >
                          <div
                            aria-checked="true"
                            class="mdc-switch mdc-switch--checked"
                            role="switch"
                            tabindex="0"
                          >
                            <div
                              class="mdc-switch__track"
                            >
                               
                            </div>
                            <div
                              class="mdc-switch__thumb-underlay"
                            >
                              <div
                                class="mdc-switch__thumb"
                              >
                                <input
                                  checked=""
                                  class="mdc-switch__native-control"
                                  id="googlesitekit-switch-11"
                                  readonly=""
                                  role="switch"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </div>
                          <label
                            class=""
                            for="googlesitekit-switch-11"
                          >
                            Enable enhanced measurement
                          </label>
                          <p
                            class="googlesitekit-module-settings-group__helper-text"
                          >
                            This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
                            <a
                              aria-label="Learn more (opens in a new tab)"
                              class="googlesitekit-cta-link"
                              href="https://support.google.com/analytics/answer/9216061?hl=en-US"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              <span
                                class="googlesitekit-cta-link__contents"
                              >
                                Learn more
                              </span>
                              <span
                                class="googlesitekit-icon-wrapper"
                                style="margin-left: 5px;"
                              >
                                <svg />
                              </span>
                            </a>
                          </p>
                        </div>
                        <p
                          class="googlesitekit-color--surfaces-on-background-variant"
                        >
                          To track how visitors interact with your site, Site Kit will enable plugin conversion tracking. You can always disable it in settings. 
                          <a
                            aria-label="Learn more (opens in a new tab)"
                            class="googlesitekit-cta-link"
                            href="https://sitekit.withgoogle.com/support/?doc=plugin-conversion-tracking"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            <span
                              class="googlesitekit-cta-link__contents"
                            >
                              Learn more
                            </span>
                            <span
                              class="googlesitekit-icon-wrapper"
                              style="margin-left: 5px;"
                            >
                              <svg />
                            </span>
                          </a>
                        </p>
                        <div
                          class="googlesitekit-setup-module__action"
                        >
                          <button
                            class="mdc-button googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
                            target="_self"
                          >
                            <span
                              class="mdc-button__label"
                            >
                              Setup
                            </span>
                          </button>
                        </div>
                      </form>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="googlesitekit-setup__footer googlesitekit-setup__footer--analytics-4"
            >
              <div
                class="mdc-layout-grid"
              >
                <div
                  class="mdc-layout-grid__inner"
                >
                  <div
                    class="mdc-layout-grid__cell mdc-layout-grid__cell--align-middle mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-phone"
                  >
                    <a
                      class="googlesitekit-cta-link"
                      href="http://example.com/wp-admin/admin.php?page=googlesitekit-settings"
                      id="setup-analytics-4-cancel"
                    >
                      <span
                        class="googlesitekit-cta-link__contents"
                      >
                        Cancel
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;
